<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_info"
        android:textColor="@color/light_gray"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="2dp"
        android:textSize="@dimen/info_size"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/timeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="2dp"
        android:textSize="@dimen/info_size"
        android:text="@string/time"/>

    <TextView
        android:id="@+id/countTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="2dp"
        android:textSize="@dimen/info_size"
        android:text="@string/phrase_count"/>

    <TextView
        android:id="@+id/userTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="2dp"
        android:textSize="@dimen/info_size"
        android:text="@string/user"/>

    <TextView
        android:id="@+id/keyboardTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="2dp"
        android:textSize="@dimen/info_size"
        android:text="@string/tested_keyboard"/>

    <TextView
        android:id="@+id/handlingTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="2dp"
        android:textSize="@dimen/info_size"
        android:text="@string/handling"/>

    <TextView
        android:id="@+id/nativeKeyboardTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="2dp"
        android:textSize="@dimen/info_size"
        android:text="@string/native_keyboard"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_phrase_info"
        android:textColor="@color/light_gray"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/info_size"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/phraseResultsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="2dp"
        android:textSize="@dimen/info_size"/>
</LinearLayout>