<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/info_size"
            android:textColor="@color/light_gray"
            android:text="@string/phrase_to_input"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/phraseGenerateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/generate_phrase"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textAlignment="viewStart"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/light_gray"
            app:strokeWidth="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/type_phrase_here"
            android:textSize="@dimen/info_size"
            android:textColor="@color/light_gray"/>

        <EditText
            android:id="@+id/transcribeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"/>

        <include layout="@layout/session_info"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>